# Cosmetic

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agent/: graph.py  state.py
backend/app/agent/nodes/: disclaim.py  intake.py  recommend.py  retrieve.py  risk_assessment.py  safety_gate.py  vision_extract.py
backend/app/core/: config.py  database.py  embedding.py  llm.py  logging.py  observe.py  reranker.py  sanitizer.py  tokenizer.py
backend/app/data/: medical_dict.txt
backend/app/models/: __init__.py  audit.py  document.py  project_card.py  schemas.py  session.py
backend/app/routers/: agent.py  chat.py  knowledge.py
backend/app/services/: audit.py  ingest.py  query_enhance.py  rag.py  session.py  structured_kb.py  vision.py
backend/scripts/: backfill_tokens.py  batch_ingest.py  collect_pubmed_plan.py  download_vision_pilot_ffhq.py  extract_project_cards.py  process_inbox.py  seed_knowledge.py  vision_pilot.py
docs/: design.md  phase0_setup.md  phase1_采集方案.md  rag_vs_raw_comparison_report_2026-05-28.md  roadmap.md
docs/rag_eval/2026-05-28-agent-rag-vs-raw-10q/: raw_outputs.json  report.md
docs/vision_pilot/: README.md
docs/vision_pilot/prompts/: v1_naive.txt  v2_domain_aware.txt  v3_re_examination.txt
frontend/: .dockerignore  Dockerfile  package.json
infra/nginx/: default.conf
knowledge/: README.md
knowledge/_meta/: redline.yaml
knowledge/_templates/: product.md
knowledge/注射填充/: 乔雅登玻尿酸.md
scripts/: md_to_docx.py  md_to_pdf.py
(+21 files in other folders)
